@@ -1,3 +1,7 @@
+2016-11-17  Carl Hetherington  <cth@carlh.net>
+
+	* Prevent duplicate screen names within a cinema (#1007).
+
 2016-11-16  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.10.1 released.
